[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transform-md"
version = "0.1.0"
authors = [
  { name="@westurner" },
]
description = "Transform exported Gemini chat markdown into improved markdown."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/westurner/transform_md"

[project.scripts]
transform-md = "transform_md.transform_md:_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["transform_md*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
